# pointcloud_bridge

./: .gitignore  CMakeLists.txt  package.xml
config/: bridge_config.yaml  fastlio_bridge_config.yaml  fastlio_recorder_config.yaml  recorder_config.yaml
include/pointcloud_bridge/: writers.hpp  writers_optimized.hpp
launch/: bridge.launch.py  recorder.launch.py
proto/: pointcloud.proto
scripts/: perf_test.py  run_perf_test.sh
src/: bridge_node.cpp  recorder_node.cpp  recorder_node_optimized.cpp
test/: benchmark_operations.cpp  test_bridge_recorder.py  test_launch_integration.sh  test_writers.cpp
